# sklo5

./: .env  INITIAL_SETUP.md  POLLING_SETUP_GUIDE.md  README.md  STARTUP_SCRIPTS.md  TROUBLESHOOTING.md  WEBHOOK_SETUP_GUIDE.md  add_more_test_points.py  bot.py  bot_launcher.py  bot_startup.py  clean_user_data.py  config.py  create_test_route.py  database.py  error_webhook_request.json  fixed_map_generator.py  last_webhook_request.json  main.py  mode_switcher.py  models.py  pyproject.toml  requirements.txt  run_bot.sh  run_webhook.sh  scheduled_tasks.py  timeoff_requests.py  tracker.db  update_db_structure.py  user_management.py  utils.py
static/: styles.css
templates/: base.html  index.html  reports.html  users.html
